#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.90 released.

        * Fixed last "known" error condition when running under
          Cygwin/Windows.

        * Modified Makefile.PL to do optional registry
          modification.

        * Now forcing build and install of very latest
          BerkeleyDB in order to enhance reliability.


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.89 released.

        * HAPPY NEW YEAR!!

        * Added 'Plan' functionality. (Not yet usable).


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.88 released.

        * Added test for first invocation and NOTICE message
          to advice patience with slow first startup due to
          the need for ssh to negotiate initial encryption.


2010-12-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.87 released.

        * Removed all code utilizing MLDBM and DB_File and
          replaced with BerkeleyDB in order to use MVCC.

        * Added use of Data::Dump::Streamer to use with
          BerkeleyDB


2010-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.86 released.

        * Merry Christmas!

        * Added test for Berkeley DB version 4.5 or greater
          in order to use MVCC.

        * Changed DB location in FA_Core.pm.


2010-12-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.85 released.

        * Remove testing print statements from Makefile.PL.


2010-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
