@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.90';
+our $VERSION='0.91';
 
 
 use 5.005;
